variables, fuentes y container

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,28 @@ img{
     height: auto;
     display: block;
 }
+
+html{
+    /* Para generar un scroll animado con ancla */
+    scroll-behavior: smooth;
+}
+
+:root{
+    --fuentePrincipal:'Montserrat', sans-serif;
+    --fuenteSecundaria:'Handlee', cursive;
+    --colorPrincipal: #fa573a;
+    --colorSecundario: #21242e;
+    --fontSize: 1em;
+    --anchoMaximo: 1100px;
+    --marginGrid: 1em;
+}
+
+body{
+    font-family: var(--fuentePrincipal);
+    font-size: var(--fontSize);
+}
+
+.container{
+    max-width: var(--anchoMaximo);
+    margin: 0 auto;
+}
