nav_top y maquetacion de nav y el logo

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,43 @@ body{
     max-width: var(--anchoMaximo);
     margin: 0 auto;
 }
+
+
+/* INICIO HEADER----------------------------- */
+
+header .nav_top{
+    background-color: var(--colorSecundario);
+    padding: var(--marginGrid);
+}
+header .nav_top .container{
+    display: flex;
+    justify-content: space-around;
+}
+
+header .nav_top a{
+    color: var(--colorPrincipal);
+    text-decoration: none;
+}
+
+header .nav_top a i{
+    color: var(--colorPrincipal);
+    font-size: 140%;
+}
+
+header .nav_top a span{
+    color: white;
+    display: none;
+}
+/* FINAL HEADER------------------------------ */
+
+/* MEDIAQUERYS ------------------------------ */
+/* breakpoint 768px */
+@media(min-width: 48em){
+    header .nav_top a span{
+        display: inline-block;
+    }
+
+    header .nav_top .container{
+        justify-content: space-between;
+    }
+}
