--- a/css/style_resuelto.css
+++ b/css/style_resuelto.css
@@ -235,6 +235,84 @@ footer a:hover{
 
 /* FINAL HERO */
 
+/* INICIO OUR SERVICES */
+section{
+    padding:2.5em 0 4em 0
+}
+
+section h2{
+    color: black;
+    font-family: var(--fuenteSecundaria);
+    font-size: 200%;
+    text-align: center;
+}
+section h2 span{
+    color: var(--colorPrincipal);
+}
+
+section .underline{
+    position: relative;
+    width: 100px;
+    margin: 0 auto;
+    font-weight: 700;
+    color: var(--colorPrincipal);
+    text-align: center;
+}
+
+section .underline hr{
+    position: absolute;
+    width: 100%;
+    top:-1px;
+    border-color: var(--colorPrincipal);
+}
+#ourservices .grid{
+    display: grid;
+    /* grid-template-columns */
+    /* grid-template-rows */
+    grid-template-columns:repeat(1fr);
+    /* grid-template-columns: repeat(6, 1fr) 6 elementos repartidos en columnas de 1fr */
+    /* GAP espacio entre columnas */
+    gap: var(--marginGrid);
+    padding: 0 var(--marginGrid);
+}
+section article{
+    padding: calc(var(--marginGrid)*2) 0;
+    border-bottom: 1px solid #aaa;
+}
+section article h3{
+    font-weight: 700;
+    margin: 0.5em 0;
+    font-size: 110%;
+}
+
+
+
+section p{
+    color: #777;
+    line-height: 1.15em;
+    margin-bottom: var(--marginGrid);
+}
+
+#ourservices article>div i{
+    border: 1px solid var(--colorPrincipal);
+    color: var(--colorPrincipal);
+    font-size: 150%;
+    padding: 0.5em
+}
+
+.fa-truck{
+    transform: rotateY(180deg);
+}
+
+.enlace{
+    text-decoration: none;
+    color: var(--colorPrincipal);
+    font-weight: 700;
+}
+/* FINAL OUR SERVICES */
+
+
+
 /* MEDIAQUERYS ------------------------------ */
 /* breakpoint 768px */
 @media(min-width: 48em){
@@ -244,6 +322,19 @@ footer a:hover{
 
     header .nav_top .container{
         justify-content: space-between;
+    }
+    #ourservices .grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #ourservices .grid article:last-child{
+        grid-column: 1/3;
+    }
+
+    section article{
+        padding: calc(var(--marginGrid)*2);
+        border-bottom: 0px;
+        border-left: 1px solid #aaa;
     }
 }
     /* breakpoint 1004px */
@@ -265,5 +356,13 @@ footer a:hover{
         border: 0px;
         padding: 0.4em 0em 0.4em 2.5em;
         
+    }
+
+    #ourservices .grid{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    #ourservices .grid article:last-child{
+        grid-column: 3/4;
     }
 }
