seccion Our Blogs comenzado, linkado a style resuelto

--- a/css/style_resuelto.css
+++ b/css/style_resuelto.css
@@ -311,6 +311,11 @@ section p{
 }
 /* FINAL OUR SERVICES */
 
+/* --------------------------------------------------------INICIO OUR BLOGS */
+
+
+
+/* -------------------------------------------------------FINAL OUR BLOGS */
 
 
 /* MEDIAQUERYS ------------------------------ */
