--- a/css/style_resuelto.css
+++ b/css/style_resuelto.css
@@ -313,6 +313,38 @@ section p{
 
 /* --------------------------------------------------------INICIO OUR BLOGS */
 
+    #ourblogs .underline{
+        margin-bottom: var(--marginGrid);
+    }
+
+    #ourblogs .flex{
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .blogs{
+        margin: var(--marginGrid);
+    }
+
+    #ourblogs .blogs .blogs_img{
+        position: relative;
+    }
+
+    #ourblogs .blogs .blogs_img>div{
+        position: absolute;
+        background-color: rgba(250, 87, 58, 0.80);
+        width: 60px;
+        height: 60px;
+        color: white;
+        top: 0;
+        left: 0;
+        font-weight: bold;
+        line-height: 1.5em;
+        
+        
+    }
+
+
 
 
 /* -------------------------------------------------------FINAL OUR BLOGS */
